Overflow Styling Fixes and Adjustments
Add and adjust stylings so that large bodies of text, whether in
editNotesView or NotesView, overflow properly (overflow-wrap: anywhere). Adjust grow behavior in
editNotesView so that large text bodies don't force text and title to
overlap one another (using flex property for all flex children).

--- a/src/style.css
+++ b/src/style.css
@@ -164,14 +164,16 @@ body {
   font-weight: bold;
   max-height: 2.1rem;
   max-width: 11rem;
-  overflow: hidden;
+  overflow-wrap: anywhere; /*Forces overflow text break to the next line once max width is reached*/
+  overflow: hidden; /*Forces overflow text to be hidden once max-height is reached*/
   margin-bottom: 0.2rem;
 }
 
 .note--text-body {
-  overflow: hidden;
+  overflow-wrap: anywhere; /*Forces overflow text break to the next line once max width is reached*/
   max-height: 9.7rem;
   line-height: 1.2rem;
+  overflow: hidden; /*Forces overflow text to be hidden once max-height is reached*/
 }
 
 .note--footer {
@@ -237,23 +239,19 @@ body {
   background-color: white;
   margin: 10% auto; /* 15% from the top and centered */
   padding: 1rem;
-  /* max-width: 50%;  */
   /* Could be more or less, depending on screen size */
   width: clamp(300px, 50%, 800px);
-  /* height: clamp(300px, 500px, 800px); */
-  /* height: min(300px); */
-
-  max-height: 50%;
+  max-height: 70%;
   border-radius: 10px;
 }
 
 .modal--note-title {
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   font-size: larger;
-  outline: none;
   max-height: 3rem;
-  overflow: hidden;
+  overflow: auto;
+  flex: 0 0 auto; /*Controls how flex item grows (or doesn't)*/
 }
 
 .modal--note-title[placeholder]:empty::before {
@@ -262,13 +260,12 @@ body {
 }
 
 .modal--note-text {
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
   border: none;
   overflow: auto;
   width: 100%;
-  outline: none;
+  flex: 2 0 max-content; /*Controls how flex item grows (or doesn't)*/
   max-height: 30%;
-  /* max-height: calc(100vh - 65vh); */
 }
 
 .modal--note-text[placeholder]:empty::before {
@@ -282,6 +279,7 @@ body {
   justify-content: space-between;
   align-items: center;
   border-radius: 0.5rem;
+  flex: 0.5 0 auto;
 }
 
 .btn--modal--close {
@@ -290,6 +288,7 @@ body {
   font-size: 28px;
   font-weight: bold;
   margin-top: -2%;
+  flex: 0.5 1 auto;
 }
 
 .btn--modal--close:hover,
